# asmblr-git

./: CMakeLists.txt  README.md
src/: args_handler.c  args_handler.h  asmblr.c  asmblr.h  asmsim.c  asmsim.h  assembler.c  assembler.h  client.c  error.c  error.h  main.c  simulator.c  simulator.h  text.h
src/lib/: args.c  args.h  deque.c  deque.h  fixed_dict.c  fixed_dict.h  list.c  list.h  queue.c  queue.h
tests/: test.bc  test.txt
